lista de carros estatica

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,17 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Aluracar
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  Hello world!
+  <ion-list>
+    <ion-item>Brasília</ion-item>
+    <ion-item>Opala</ion-item>
+    <ion-item>Monza</ion-item>
+    <ion-item>Saveiro</ion-item>
+    <ion-item>Passat</ion-item>
+  </ion-list>
 </ion-content>
