--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -34,7 +34,7 @@
   </form>
 
   <ion-fab top right edge>
-    <button ion-fab (click)="formulario.ngSubmit.emit()">
+    <button ion-fab mini (click)="formulario.ngSubmit.emit()">
       <ion-icon name="send"></ion-icon>
     </button>
   </ion-fab>
