--- a/src/pages/escolha/escolha.html
+++ b/src/pages/escolha/escolha.html
@@ -38,7 +38,7 @@
   </ion-item-divider>
 
   <ion-fab top right edge>
-    <button ion-fab (click)="avancaCadastro();">
+    <button ion-fab mini (click)="avancaCadastro();">
       <ion-icon name="arrow-dropright"></ion-icon>
     </button>
   </ion-fab>
