dados usuario logado + fix menu na tela de login

--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -11,7 +11,7 @@
   <ion-item no-lines>
     <div class="avatar-wrapper">
       <ion-avatar>
-        <img src="assets/img/ramon.png">
+        <img src="assets/img/avatar-padrao.jpg">
       </ion-avatar>
 
       <button class="btn-tirar-foto" ion-button icon-only round>
@@ -22,19 +22,19 @@
   <ion-card>
     <ion-item>
       <ion-icon name="contact" item-left></ion-icon>
-      Ramón Souza
+      {{usuarioLogado.nome}}
     </ion-item>
     <ion-item>
       <ion-icon name="calendar" item-left></ion-icon>
-      <p>01/04/1991</p>
+      <p>{{usuarioLogado.dataNascimento}}</p>
     </ion-item>
     <ion-item>
       <ion-icon name="at" item-left></ion-icon>
-      <p>contato@ramonsouza.com</p>
+      <p>{{usuarioLogado.email}}</p>
     </ion-item>
     <ion-item>
       <ion-icon name="call" item-left></ion-icon>
-      <p>51 9 8048 6613</p>
+      <p>{{usuarioLogado.telefone}}</p>
     </ion-item>
     
   </ion-card>
