--- a/src/pages/lista-agendamentos/lista-agendamentos.html
+++ b/src/pages/lista-agendamentos/lista-agendamentos.html
@@ -10,7 +10,10 @@
 <ion-content padding>
 <ion-list>
   <ion-item [class.falha]="!agendamento.enviado" *ngFor="let agendamento of agendamentos">
-    {{agendamento.nomeCliente}} - {{agendamento.modeloCarro}}
+    {{agendamento.nomeCliente}} - {{agendamento.data | date: 'dd/MM/yyyy'}}
+    <p>{{agendamento.modeloCarro}} - R$ {{agendamento.precoTotal}}</p>
+
+    <ion-badge item-end *ngIf="agendamento.confirmado && !agendamento.visualizado">Confirmado!</ion-badge>
 
       <button ion-button item-end icon-only clear *ngIf="!agendamento.enviado" (click)="reenvia(agendamento)">
       <ion-icon name="refresh"></ion-icon>
